<resources>
    <string name="app_name">Sound Board</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="Bflat">BF</string>
    <string name="Csharp">CS</string>
    <string name="Dsharp">DS</string>
    <string name="Fsharp">FS</string>
    <string name="Gsharp">GS</string>
    <string name="OctaveChanger">Octave Changer</string>
    <string name="songs">Song 1</string>
    <string name="scale">Scale</string>
    <string name="noteAdder">Note Adder</string>


</resources>
